implemented routing, recipe service

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,10 @@
   <div class="container-fluid">
 
     <!-- To make the navbar-header responsive to smaller screens -->
-    <div class="navbar-header">
+    <!-- <div class="navbar-header"> -->
 
-      <a routerLink="/" class="navbar-brand">Recipe Book</a>
-    </div>
+    <a routerLink="/" class="navbar-brand">Recipe Book</a>
+    <!-- </div> -->
 
     <!-- Collapses the other navbar elements into a hamburger menu -->
     <!-- <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true"> -->
