--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,8 +20,8 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" open>
-        <li><a>To Shopping List</a></li>
-        <li><a>Edit Recipe</a></li>
+        <li><a (click)="onAddToShoppingList()">To Shopping List</a></li>
+        <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a>Delete Recipe</a></li>
       </ul>
     </div>
