--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive" style="max-height: 300px;">
+    <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive">
   </div>
 </div>
 <div class="row">
@@ -20,7 +20,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" open>
-        <li><a (click)="onAddToShoppingList()">To Shopping List</a></li>
+        <li><a (click)="onAddToShoppingList()">Add To Shopping List</a></li>
         <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a>Delete Recipe</a></li>
       </ul>
