--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <p>Shopping Edit</p>
+    <h4>Shopping Edit</h4>
     <form>
       <div class="row">
         <div class="col-xs-5 form-group">
