--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <h4>Shopping Edit</h4>
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-xs-5 form-group">
           <label for="name">Name</label>
@@ -16,7 +16,8 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="button">Add | Update</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editShoppingList ? 'Update' :
+            'Add'}}</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
