--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -48,14 +48,14 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              <button type="button" class="btn btn-success">Add Ingredient</button>
+              <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
             </div>
           </div>
           <hr>
           <div class="row" id="form-buttons">
             <div class="col-xs-12">
               <button type="submit" class="btn btn-success">Save</button>
-              <button type="button" class="btn btn-danger">Cancel</button>
+              <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
             </div>
           </div>
         </div>
