--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -54,7 +54,7 @@
           <hr>
           <div class="row" id="form-buttons">
             <div class="col-xs-12">
-              <button type="submit" class="btn btn-success">Save</button>
+              <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
               <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
             </div>
           </div>
