added app-routing comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="column-md-12">
+      <!-- <router-outlet> is a directive that tells Angular where the components specified in the app-routing are rendered -->
       <router-outlet></router-outlet>
     </div>
   </div>
