--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active">
+          <!-- "routerLink" is a directive that tells Angular to render the page without having to reload/refresh the page -->
           <a routerLink="/recipes">Recipes</a>
         </li>
         <li routerLinkActive="active">
