--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,10 @@
     <!-- <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true"> -->
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active">
+        <li routerLinkActive="active" *ngIf="!isAuthenticated">
+          <a routerLink="/login">Login</a>
+        </li>
+        <li routerLinkActive="active" *ngIf="isAuthenticated">
           <!-- "routerLink" is a directive that tells Angular to render the page without having to reload/refresh the page -->
           <a routerLink="/recipes">Recipes</a>
         </li>
@@ -16,7 +19,10 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticated">
+          <a (click)="onLogout()">Logout</a>
+        </li>
+        <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a class="dropdown-toggle" role="button">Manage <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
